# verisol

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  action.yml  pyproject.toml
.github/workflows/: tests.yml  verisol.yml
benchmarks/: README.md  compare.py  contracts.json  run_defivulnlabs.py  run_gpt4.py  run_gpt4_fewshot.py  run_llm_exploits.py  run_slither.py
data/: README.md
data/contracts/defivulnlabs/: Backdoor.sol  BypassContract.sol  DOS.sol  DataLocation.sol  Delegatecall.sol  DivideBeforeMultiply.sol  Ecrecover.sol  FirstDeposit.sol  OracleStale.sol  Overflow.sol  PrecisionLoss.sol  PriceManipulation.sol  PrivateData.sol  Randomness.sol  ReadOnlyReentrancy.sol  Reentrancy.sol  Selfdestruct.sol  SignatureReplay.sol  StorageCollision.sol  TxOrigin.sol  UninitializedProxy.sol  UnprotectedCallback.sol  UnsafeCall.sol  Visibility.sol
data/contracts/mainnet/: EtherGame_Selfdestruct_Vulnerable.sol  EtherStore_Vulnerable.sol  FlashLoan_Vulnerable.sol  MissingAccessControl_Vulnerable.sol  Proxy_Delegatecall_Vulnerable.sol  SecureVault_Clean.sol  SimpleMultisig_Clean.sol  SimpleStaking_Clean.sol  SimpleToken_Clean.sol  TimeLock_Overflow_Vulnerable.sol  UncheckedReturn_Vulnerable.sol  WETH9.sol  (+1 more)
docs/: github-action.md
examples/: SimpleToken.sol
scripts/: README.md  run_baseline.py  setup_tools.sh
src/: README.md
src/verisol/: __init__.py  api.py  cli.py  config.py  pipeline.py
tests/: __init__.py  test_agent.py  test_etherscan.py  test_exploits.py  test_llm_generator.py  test_runner_fork.py  test_verifiers.py
(+25 files in other folders)
